--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,6 @@ edition = "2018"
 
 [dependencies]
 headless_chrome = "0.9.0"
-#url = "2.1.1"
-failure = "0.1.5"
+failure = "0.1.8"
 chrono = "0.4.19"
+regex = "1.4.2"
