--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,10 @@ headless_chrome = "0.9.0"
 failure = "0.1.8"
 chrono = "0.4.19"
 regex = "1.4.2"
+    
+hyper = "0.13.9"
+tokio = { version = "0.2", features = ["full"] }
+futures = "0.3.8"
+
+#[profile.release]
+#debug = true
