--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,9 @@ edition = "2018"
 
 #Too many dependencies imho...
 [dependencies]
-headless_chrome = "0.9.0"
+fantoccini = "0.17.3"
+webdriver = "0.43.0"
+serde_json = "1.0.64"
 failure = "0.1.8"
 chrono = "0.4.19"
 regex = "1.4.2"
